log
Sat, Mar 22, 2025 10:33:09 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 10:46:56 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <= 10; i++){
    ^~~
exercises.c: In function 'sumaLista':
exercises.c:68:24: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
       elemento += next(&L);
                        ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:14:7: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void* next(List *L);
       ^~~~
In file included from test.c:5:0:
exercises.c:68:16: error: invalid operands to binary + (have 'int *' and 'void *')
       elemento += next(&L);
                ^~ ~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
61dea1f
Sat, Mar 22, 2025 11:24:09 PM: 
 exercises.c | 36 +++++++++++++++++++++++++++++++-----
 1 file changed, 31 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <= 10; i++){
    ^~~
exercises.c:50:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int *) malloc(sizeof(int));
                 ^
exercises.c: In function 'eliminaElementos':
exercises.c:86:4: error: invalid use of undefined type 'struct List'
    while(L[i]!= NULL)
    ^~~~~
exercises.c:86:11: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    while(L[i]!= NULL)
           ^
exercises.c:88:7: error: invalid use of undefined type 'struct List'
       if (L[i] == elem )
       ^~
exercises.c:90:10: error: too many arguments to function 'popCurrent'
          popCurrent(L, i);
          ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
In file included from test.c:5:0:
exercises.c:93:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
a77467b
